[project]
name = "dok-klaim-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.121.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.0.2",
    "pymupdf>=1.26.5",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]
