[project]
name = "dok-klaim-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.12.0",
    "fastapi>=0.121.0",
    "fastembed>=0.7.3",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "langchain-qdrant>=1.1.0",
    "langgraph>=1.0.2",
    "pandas>=2.3.3",
    "pymupdf>=1.26.5",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.15.1",
    "uvicorn>=0.38.0",
]
