[project]
name = "dok-klaim-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.121.0",
    "fastembed>=0.7.4",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.0.2",
    "ollama>=0.6.0",
    "psycopg[binary,pool]>=3.3.2",
    "pymupdf>=1.26.5",
    "pymupdf-layout>=1.26.6",
    "pymupdf4llm>=0.2.9",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.16.2",
    "sentence-transformers>=5.2.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "uvicorn>=0.38.0",
]
